Preserve nullable literal list values